# qml3dplayerqtexample

./: CMakeLists.txt  main.cpp  videoplayer.cpp
